# henchman_bot

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/henchman_bot/: __init__.py
tests/: test_henchman_bot.py
