[tool.poetry]
name = "henchman_bot"
version = "0.1.0"
description = "This is the main package of the bot, with some simple cogs, aswell as a CLI for registering extensions"
authors = ["Dylan Garrett"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
